scripts/04-create-namespace-sidecar-enabled-annotation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-lab 
  annotations:
    linkerd.io/inject: enabled
